From bb58903 (reflection-constraints):
=====================================

In prisim/primary_beams.py,

(*) Fix wrong info on description of frequency input parameter in
docstring of function airy_disk_pattern()
(*) Update comment where zero_ind is determined in function
airy_disk_pattern()

From 8fd1df3 (reflection-constraints):
=====================================

(*) Add prisim/examples/postprocess/ to the repository
(*) Add prisim/examples/postprocess/reflection_constraints.yaml to repo
(*) Add scripts/reflection_constraints.py to repo
(*) Add .gitignore to repo

In prisim/delay_spectrum.py,

(*) Import scipy.interpolate
(*) Add function dkperp_dbll() to determine the jacobian to transform
uv-distance to kperp, along with docstring
(*) Update docstring on cosmo input parameter in function dkprll_deta()
(*) Update docstring on cosmo input parameter in __init__() member
function of class DelayPowerSpectrum
(*) Add function reflection_attenuation() to estimate constraints on
reflection attenuation, along with docstring

From 078acf1 (reflection-constraints):
=====================================

In prisim/delay_spectrum.py,

(*) Import h5py
(*) In member function beam3Dvol() of class DelayPowerSpectrum, modify
to accept external beams in HDF5 format.
(*) In member function beam3Dvol() of class DelayPowerSpectrum, modify
default input nside to 64 (previously 32)
(*) In member function beam3Dvol() of class DelayPowerSpectrum, check
for units of external beam

From f05b84f (reflection-constraints):
=====================================

In scripts/SKA_low_healpix_beam_to_PRISim_format.py,

(*) Fix bugs to write the beam array with the right shape into the
external HDF5 file

In scripts/run_prisim.py,

(*) Remove import sof scipy.interpolate
(*) Fix bugs to read properly the antenna power pattern from the
external HDF5 file

From 94f15d0 (master):
=====================

(*) prisim/examples/pbparms/SKA_low_healpix_beam_to_PRISim_format.yaml
added to repo